tests/macros/duplicate/page_size.stderr
error: duplicate option `page_size`
 --> $DIR/page_size.rs:4:9
  |
4 |         page_size: todo!(),
  |         ^^^^^^^^^
