tests/macros/duplicate/page_size.rs
fn main() {
    let q = inquisition::questions![list {
        page_size: todo!(),
        page_size: todo!(),
    }];
}
